# cvs-lib

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE_BSD-3-CLAUSE  README.adoc
cmake/: FormatCode.cmake  PreventInTreeBuilds.cmake  Util.cmake
include/VSC/: VerilatorBench.h
include/VSC/gfx/: Canvas2dVk.h  DeviceSetupVk.h  EnumeratorVk.h  MainLoopVk.h  TextureBuf.h  WindowVk.h  glfw_fwd.h
include/VSC/internal/: SetMacros.h  UnsetMacros.h
include/VSC/util/: Common.h  Concept.h  Exception.h  ScopedResource.h  Suppressions.h
src/: 2dfrag.vert.glsl  2dvert.frag.glsl  CMakeLists.txt  Canvas2DVk.cpp  DeviceSetupVk.cpp  EnumeratorVk.cpp  MainLoopVk.cpp  WindowVk.cpp
